# ENGINE

./: .conanfile.py.swp  .gitignore  .gitmodules  CMakeGraphVizOptions.cmake  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  bootstrap.bat  bootstrap.sh  buildfile.py  conanfile.py  conanfile.txt  environment.yml  notes.txt
.github/workflows/: ubuntu-gcc.yml
buildscripts/: buildenv.py
gltf/sandbox/: sandbox.gltf
gltf/suzanne/: suzanne.gltf
include/: Utils.hpp  application.hpp
include/algorithms/: DFT.hpp
include/application/: Application.hpp  ConcurrentQueue.hpp
include/events/: Event.hpp
include/filesystem/: FilesystemInterface.hpp
include/gui/: Gui.hpp
include/guis/: SceneGui.hpp
include/hid/: Input.hpp
include/interfaces/: Buffer.hpp  Command.hpp  Device.hpp  FilesystemInterface.hpp  Gltf.hpp  Image.hpp  Instance.h  Instance.hpp  Logging.hpp  Obj.hpp  PhysicalDevice.h  Scene.hpp  Swapchain.hpp  command.h  device.h  gltf.h  gui.h  image.h  obj.h  scene.h  swapchain.h
include/logger/: Logging.hpp
include/physics/: physics.hpp
include/pipelines/: ENG_Pipeline.hpp  Pipeline.hpp  PipelineFactory.hpp  PipelinePosColTex.hpp  Pipeline_PosColTex.hpp  ShaderFactory.hpp  pipeline_factory.hpp  shader_factory.hpp  utils.hpp
include/primitives/: Mesh.hpp  mesh.hpp
include/renderer/: Command.hpp  Image.hpp  PhysicalDevice.hpp  Renderer.hpp  RendererI.hpp  Swapchain.hpp  Utils.hpp
include/renderer/pipelines/: Pipeline.hpp  PipelineFactory.hpp  PipelinePosColTex.hpp  PipelineUtils.hpp  ShaderFactory.hpp
include/renderer/vk/: Image.hpp  Instance.hpp  PhysicalDevice.hpp  Renderer.hpp  Swapchain.hpp
include/renderer/vk/pipelines/: PipelineFactory.hpp  PipelinePosColTex.hpp  ShaderFactory.hpp
include/renderer/vk_adapter/: VkAdapter.hpp
include/scene/: DFT.hpp  Gltf.hpp  JCT.hpp  Mesh.hpp  Node.hpp  Obj.hpp  Primitives.hpp  Scene.hpp
include/scenes/: ProceduralGeometry.hpp  SceneWorld.hpp  SceneWorldInput.hpp
include/sockets/: SocketSessionServer.h
models/: Spacefloor.mtl  Spacefloor2.mtl  Spacefloor3.mtl
profiles/: Linux-GCC8-x86_64.txt  Ubuntu-GCC-x86_64
shaders/: .gitignore  CMakeLists.txt  goldbergFrag.frag  goldbergVert.vert  posBBVert.vert  posColTexVert.vert  posNorColFrag.frag  posNorColVert.vert  posNorTexFrag.frag  posNorTexVert.vert  triFrag.frag  triVert.vert
src/: EngineConfig.h.in  EngineConfig.hpp.in  HeaderLibs.cpp  ProceduralGeometry.cpp  ProceduralGeometry.h  SocketSessionServer.cpp  SocketSessionServer.h  Utils.cpp  application.cpp  header_libs.cpp  main.cpp  scene_graph.cpp
src/algorithms/: DFT.cpp
src/application/: Application.cpp  CMakeLists.txt  ConcurrentQueue.cpp
src/config/: CMakeLists.txt  EngineConfig.hpp.in
src/events/: CMakeLists.txt  Event.cpp
src/filesystem/: CMakeLists.txt  FilesystemInterface.cpp
src/gui/: CMakeLists.txt  Gui.cpp
src/guis/: CMakeLists.txt  SceneGui.cpp
src/hid/: CMakeLists.txt  Input.cpp
src/interfaces/: Buffer.cpp  Command.cpp  FilesystemInterface.cpp  Gltf.cpp  Image.cpp  Instance.cpp  Obj.cpp  PhysicalDevice.cpp  Scene.cpp  Swapchain.cpp  buffer.cpp  command.cpp  device.cpp  gltf.cpp  image.cpp  obj.cpp  scene.cpp  swapchain.cpp
src/logger/: CMakeLists.txt
src/physics/: CMakeLists.txt  physics.cpp
src/pipelines/: ENG_Pipeline.cpp  Pipeline.cpp  PipelineFactory.cpp  PipelinePosColTex.cpp  PipelineUtils.cpp  Pipeline_PosColTex.cpp  ShaderFactory.cpp  pipeline_factory.cpp  shader_factory.cpp  utils.cpp
src/primitives/: Mesh.cpp  mesh.cpp
src/renderer/: Buffer.cpp  CMakeLists.txt  Command.cpp  Device.cpp  Image.cpp  Instance.cpp  PhysicalDevice.cpp  Renderer.cpp  Swapchain.cpp  Utils.cpp
src/renderer/pipelines/: Pipeline.cpp  PipelineFactory.cpp  PipelinePosColTex.cpp  ShaderFactory.cpp
src/renderer/vk/: Buffer.cpp  CMakeLists.txt  Command.cpp  Device.cpp  Image.cpp  Instance.cpp  PhysicalDevice.cpp  Renderer.cpp  Swapchain.cpp  Utils.cpp
src/renderer/vk/pipelines/: Pipeline.cpp  PipelineFactory.cpp  PipelinePosColTex.cpp  PipelineUtils.cpp  ShaderFactory.cpp
src/renderer/vk_adapter/: CMakeLists.txt  VkAdapter.cpp
src/scene/: CMakeLists.txt  DFT.cpp  DrawData.cpp  Gltf.cpp  JCT.cpp  Mesh.cpp  Mesh2.cpp  Node.cpp  Obj.cpp  Scene.cpp  VulkanAdapter.cpp
src/scenes/: CMakeLists.txt  ProceduralGeometry.cpp  ProceduralGeometry.h  SceneWorld.cpp  SceneWorld.hpp  SceneWorldInput.cpp
src/sockets/: CMakeLists.txt  SocketSessionServer.cpp
test/: CMakeLists.txt  test_main.cpp
